--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,3 @@
-*::-webkit-input-placeholder {
-	color: #666;
-	opacity: 1;
-}
-*:-moz-placeholder {
-	color: #666;
-	opacity: 1;
-}
-*::-moz-placeholder {
-	color: #666;
-	opacity: 1;
-}
-*:-ms-input-placeholder {
-	color: #666;
-	opacity: 1;
-}
 
 body {
 	font-family: 'Roboto', sans-serif;
@@ -33,7 +17,7 @@ body {
 .page-header {
     min-height: 600px;
     max-height: 980px;
-    background-image: url(../img/_PhotoFilter_.jpg);
+    background-image: url("../img/PhotoFilter.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
